src/App.scss
@import 'variables-mixins';

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

html,
input,
button {
	font-family: 'Nunito Sans', sans-serif;
}

body {
	background-color: $light-mode-background;
}

.container {
	display: flex;
	justify-content: center;
}

.controllers {
	width: $width;
	display: flex;
	justify-content: space-between;
	margin: 3rem 0;
}

